--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,20 @@
+# File: G:/My Drive/LAFauxPass/gradle/libs.versions.toml
+
 [versions]
+androidGradlePlugin = "8.12.0"
+kotlin = "1.9.24"
+material = "1.12.0"
+navigation = "2.7.7" # <-- Add this line
 
 [libraries]
+# ... any existing libraries
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Add these library definitions for Navigation
+navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+
 
 [plugins]
-
+androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
