--- a/rta_animation/src/main/AndroidManifest.xml
+++ b/rta_animation/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hereliesaz.videorecon">
+    package="com.hereliesaz.rta_animation">
 
     <application
         android:allowBackup="true"
